force-app/main/default/objects/LPCR_Type_Evenement_Intranet__mdt/LPCR_Type_Evenement_Intranet__mdt.object-meta.xml
<CustomObject>
    <label>LPCR Type Evènement Intranet</label>
    <pluralLabel>LPCR Types Evènement Intranet</pluralLabel>
</CustomObject>