force-app/main/default/objects/LPCR_Type_Evenement_Intranet__mdt/fields/LPCR_Annexe2__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Annexe2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LPCR Annexe2</label>
    <type>Checkbox</type>
</CustomField>