force-app/main/default/objects/LPCR_Type_Evenement_Intranet__mdt/fields/LPCR_Annexe3__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Annexe3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LPCR Annexe3</label>
    <type>Checkbox</type>
</CustomField>