force-app/main/default/objects/LPCR_Type_Evenement_Intranet__mdt/fields/LPCR_ContratAccueil__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ContratAccueil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LPCR ContratAccueil</label>
    <type>Checkbox</type>
</CustomField>