force-app/main/default/objects/LPCR_Type_Evenement_Intranet__mdt/fields/LPCR_Processus__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Processus__c</fullName>
    <label>Processus à enclencher</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avenant</fullName>
                <default>true</default>
                <label>Avenant</label>
            </value>
            <value>
                <fullName>Renouvellement</fullName>
            </value>
            <value>
                <fullName>Aucun</fullName>
            </value>
            <value>
                <fullName>Utilisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>