force-app/main/default/objects/LPCR_Type_Evenement_Intranet__mdt/fields/LPCR_ReglementCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ReglementCreche__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Règlement de la Crèche</label>
    <type>Checkbox</type>
</CustomField>