force-app/main/default/objects/LPCR_Type_Evenement_Intranet__mdt/fields/LPCR_Validation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Nécessaire</label>
    <type>Checkbox</type>
</CustomField>